syntax = "proto3";

option java_multiple_files = true;
option java_package = "shopping.cart.proto";

package shoppingcart;

// gRPC definition for ShoppingCartService

service ShoppingCartService { // <1>
    rpc AddItem (AddItemRequest) returns (Cart) {}
}

message AddItemRequest { // <2>
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
}

message Cart {
    repeated Item items = 1;
}

message Item {
    string itemId = 1;
    int32 quantity = 2;
}
